--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ markov-clustering = "^0.0.6.dev0"
 click = "^8.1.7"
 pyyaml = "^6.0.1"
 pyfiglet = "^1.0.2"
+scikit-learn = "^1.3.2"
 
 [tool.poetry.scripts]
 mclumi = "mclumi.main:main"
