--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mclumi"
-version = "0.0.2"
+version = "0.0.3"
 description = "UMI de-duplication using mclUMI"
 authors = [
     "Jianfeng Sun",
@@ -30,6 +30,11 @@ scikit-learn = "^1.3.2"
 
 [tool.poetry.scripts]
 mclumi = "mclumi.main:main"
+
+[[tool.poetry.source]]
+name = "mclumi"
+url = "https://pypi.example.org/simple/"
+priority = "supplemental"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
