--- a/.github/workflows/pypi_publish.yml
+++ b/.github/workflows/pypi_publish.yml
@@ -1,31 +1,33 @@
-name: PyPI Release
+name: Publish to PyPI
 
 on:
   push:
-    tags:
-      - '*'
+    branches:
+      - main
 
 jobs:
-  release:
+  build:
+
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v2
 
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.11
+        python-version: 3.8
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install poetry
+        python -m pip install poetry
+        poetry install
 
-    - name: Build and publish to PyPI
+    - name: Publish to PyPI
       run: |
-        poetry build
+        poetry config pypi-token.pypi ${{secrets.PYPI_TOKEN}}
         poetry publish --build
       env:
-        POETRY_PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
+        POETRY_PYPI_TOKEN: ${{secrets.PYPI_TOKEN}}
