--- a/.github/workflows/pypi_publish.yml
+++ b/.github/workflows/pypi_publish.yml
@@ -1,9 +1,12 @@
 name: Publish to PyPI
 
 on:
-  push:
-    branches:
-      - main
+  release:
+    types:
+      - published
+#  push:
+#    branches:
+#      - main
 
 jobs:
   build:
