--- a/.github/workflows/conda_publish.yml
+++ b/.github/workflows/conda_publish.yml
@@ -1,4 +1,4 @@
-name: publish_conda
+name: Publish to Conda
 
 on:
   release:
@@ -9,9 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Publish Loop Conda
-        uses: Loop3D/conda-publish-action@1.0
+      - name: publish-to-conda
+        uses: riccorl/conda-publish-action@v1.5
         with:
-          subdir: "conda"
+          subdir: 'conda'
           anacondatoken: ${{ secrets.ANACONDA_TOKEN }}
-          platforms: "win osx linux"
+          platforms: 'win osx linux'
